<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved For:  </string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to Location Reminder</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="fine_location_denied_explanation">You need location permissions in order to select a location to remind you about in this application.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter a title</string>
    <string name="err_enter_description">Please enter a description</string>
    <string name="err_select_location">Please select a location</string>
    <string name="long_press_to_set">Please long press to drop a pin where you want to set a reminder.</string>
    <string name="reminder_removed">Reminder removed for: </string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="sign_in_error">An error has occurred please try again.</string>
    <string name="save_location_from_selection">Save Location</string>
    <string name="login_required">Login is required to use this application, please try again</string>
    <string name="permission_denied_always">Location permission must be allow always for geofencing reminders!</string>
    <string name="reminder_detail_title">Reminder Details</string>
    <string name="reminder_detail_heading">You set a reminder for:</string>
    <string name="allow_location_all_time">Allow Location Access \"All The Time\"</string>
    <string name="must_allow_location">You must allow location access \"All the time\" in order to save the POI and enable reminders using Geo Fencing</string>

    <!-- reminder detailsfragment -->
    <string name="rdf_location_head">Location:</string>
    <string name="rdf_description">Description:</string>
    <string name="rdf_title_head">Reminder:</string>
    <string name="rdf_btn_save_text">Save</string>
    <string name="rdf_btn_remove_text">Remove</string>

</resources>
